// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /members should return 200 without search filters for user id 1 1`] = `
{
  "members": [
    {
      "email": "pekka.hamalainen@example.com",
      "first": "Pekka",
      "last": "Hämäläinen",
      "memberId": "Pekka1",
      "phoneNumber": "0445678901",
      "roles": [
        "MEMBER",
      ],
    },
    {
      "email": "antti.heikkinen@example.com",
      "first": "Antti",
      "last": "Heikkinen",
      "memberId": "Antti1",
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
    {
      "email": "juho.kolehmainen@iki.fi",
      "first": "Liisa",
      "last": "Korhonen",
      "memberId": "Liisa1",
      "phoneNumber": "0412345678",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "email": "sanna.koskinen@example.com",
      "first": "Sanna",
      "last": "Koskinen",
      "memberId": "Sanna1",
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "email": "anna.makinen@example.com",
      "first": "Anna",
      "last": "Mäkinen",
      "memberId": "Anna1",
      "phoneNumber": "0434567890",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "email": "jukka.nieminen@example.com",
      "first": "Jukka",
      "last": "Nieminen",
      "memberId": "Jukka1",
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
    },
    {
      "email": "juha.seppala@example.com",
      "first": "Juha",
      "last": "Seppälä",
      "memberId": "Juha1",
      "phoneNumber": "0489012345",
      "roles": [
        "MEMBER",
      ],
    },
    {
      "email": "chris.whellams@gmail.com",
      "first": "Matti",
      "last": "Virtanen",
      "memberId": "Matti1",
      "phoneNumber": "0401234567",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
  ],
}
`;

exports[`GET /members should return 200 without search filters for user id 2 1`] = `
{
  "members": [
    {
      "email": "admin@mik.fi",
      "first": "MIK",
      "last": "Admin",
      "memberId": "k1mnimda",
      "phoneNumber": null,
      "roles": [
        "ADMIN",
      ],
    },
    {
      "email": "pekka.hamalainen@example.com",
      "first": "Pekka",
      "last": "Hämäläinen",
      "memberId": "Pekka1",
      "phoneNumber": "0445678901",
      "roles": [
        "ADMIN",
        "MEMBER",
      ],
    },
    {
      "email": "antti.heikkinen@example.com",
      "first": "Antti",
      "last": "Heikkinen",
      "memberId": "Antti1",
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
    {
      "email": "juho.kolehmainen@iki.fi",
      "first": "Liisa",
      "last": "Korhonen",
      "memberId": "Liisa1",
      "phoneNumber": "0412345678",
      "roles": [
        "ADMIN",
        "COMMITTEE",
      ],
    },
    {
      "email": "sanna.koskinen@example.com",
      "first": "Sanna",
      "last": "Koskinen",
      "memberId": "Sanna1",
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "email": "kaisa.laine@example.com",
      "first": "Kaisa",
      "last": "Laine",
      "memberId": "Kaisa1",
      "phoneNumber": "0456789012",
      "roles": [
        "ADMIN",
      ],
    },
    {
      "email": "anna.makinen@example.com",
      "first": "Anna",
      "last": "Mäkinen",
      "memberId": "Anna1",
      "phoneNumber": "0434567890",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "email": "jukka.nieminen@example.com",
      "first": "Jukka",
      "last": "Nieminen",
      "memberId": "Jukka1",
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
    },
    {
      "email": "nurmikko@gmail.com",
      "first": "Marja",
      "last": "Salminen",
      "memberId": "Marja1",
      "phoneNumber": "0490123456",
      "roles": [],
    },
    {
      "email": "juha.seppala@example.com",
      "first": "Juha",
      "last": "Seppälä",
      "memberId": "Juha1",
      "phoneNumber": "0489012345",
      "roles": [
        "MEMBER",
      ],
    },
    {
      "email": "chris.whellams@gmail.com",
      "first": "Matti",
      "last": "Virtanen",
      "memberId": "Matti1",
      "phoneNumber": "0401234567",
      "roles": [
        "FLYING_MEMBER",
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
  ],
}
`;

exports[`GET /members should search by unapproved roles as an admin 1`] = `
[
  {
    "email": "nurmikko@gmail.com",
    "first": "Marja",
    "last": "Salminen",
    "memberId": "Marja1",
    "phoneNumber": "0490123456",
    "roles": [],
  },
]
`;

exports[`GET /members/id Get member details as an admin 1`] = `
{
  "billingId": null,
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "Admin",
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`GET /members/me should return 200 with valid token for user 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": true,
  "lastName": "Virtanen",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 2`] = `
{
  "billingId": null,
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "Admin",
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 3`] = `
{
  "billingId": "BILL002",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1985-02-20",
  "email": "juho.kolehmainen@iki.fi",
  "firstName": "Liisa",
  "iceContactName": "Matti Korhonen",
  "iceContactPhoneNumber": "0418765432",
  "isTrainingProgramPilot": false,
  "lastName": "Korhonen",
  "memberId": "Liisa1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "phoneNumber": "0412345678",
  "postcode": "02100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK board member with decision-making authority in the club",
      "isPublic": true,
      "name": {
        "en": "Committee Member",
        "fi": "Hallituksen jäsen",
      },
      "permissions": [],
      "roleId": "COMMITTEE",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Mannerheimintie 10",
  "townCity": "Espoo",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;
